# direct-index

./: .gitignore  README.md  direct-index.toml  pyproject.toml
direct_index/: __init__.py  cli.py  config.py  models.py
direct_index/broker/: __init__.py  base.py  ibkr.py  paper.py
direct_index/indexes/: __init__.py  base.py  csv_provider.py  ishares.py
direct_index/rebalance/: __init__.py  engine.py
direct_index/tax/: __init__.py  lots.py  reconcile.py
examples/: developed_intl.csv  prices.csv  us_large_cap.csv
scripts/: ibkr_smoke_test.py
tests/: test_config_and_providers.py  test_ibkr_adapter.py  test_rebalance.py  test_reconcile.py  test_tax_lots.py
